--- a/index.html
+++ b/index.html
@@ -1,4 +1,7 @@
 <html>
+  <head>
+    <meta http-equiv="refresh" content="5;url=https://david-dev8.github.io/">
+  </head>
   <body>
     <p>Hello world!</p>
   </body>
