--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <p id="number">Make here</p>
   </body>
   <script>
-    const API_Key = "";
+    const API_Key = "Y+XHb6AhHZDBMTldOa4B1A==5Mh5JpOzh5Akea59";
     const hit = async () => {
       const response = await fetch("https://api.api-ninjas.com/v1/cars?limit=2&model=camry", {
         headers: new Headers({'X-Api-Key': API_Key}),});
