--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
   <body>
     <p>Hello world!</p>
     <p id="number">Make here</p>
+    <a href="https://bo.hondsrugcollege.nl/toetsen/bsm-toets-bewegen-en-gezondheid-havo-4/">https://bo.hondsrugcollege.nl/toetsen/bsm-toets-bewegen-en-gezondheid-havo-4/</a>
   </body>
   <script>
     const API_Key = "Y+XHb6AhHZDBMTldOa4B1A==5Mh5JpOzh5Akea59";
